Fix flicker

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -5,8 +5,8 @@
   width: 100%;
   border-radius: $tdbc-border-radius;
   background-color: #fff;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-  transition: all 100ms ease-in;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  transition: border-color 100ms ease-in;
   border: 3px solid white;
 
   &__link {
